[gd_scene load_steps=28 format=3 uid="uid://njuy78jabbgv"]

[ext_resource type="Texture2D" uid="uid://b4dp33sk6677c" path="res://Arts/study_room.png" id="1_5g1kl"]
[ext_resource type="Script" path="res://Scripts/study_room.gd" id="1_ph431"]
[ext_resource type="Script" path="res://Scripts/computer_control.gd" id="2_pepfh"]
[ext_resource type="Script" path="res://Scripts/calendar_control.gd" id="3_iyfv0"]
[ext_resource type="Script" path="res://Scripts/scene_nav.gd" id="3_qt56e"]
[ext_resource type="FontFile" uid="uid://cthro4rqrdyu0" path="res://Fonts/press-start-2p-font/PressStart2P-vaV7.ttf" id="4_4eer6"]
[ext_resource type="Script" path="res://Scripts/hover_rect.gd" id="4_qvdir"]
[ext_resource type="Script" path="res://Scripts/top_book_control.gd" id="5_1666q"]
[ext_resource type="Texture2D" uid="uid://de11q0pih3duv" path="res://Arts/nav_icon_home.png" id="5_a26r8"]
[ext_resource type="Script" path="res://Scripts/vault_control.gd" id="5_ca4rd"]
[ext_resource type="Script" path="res://Scripts/books.gd" id="6_w6iad"]
[ext_resource type="Script" path="res://Scripts/globe_control.gd" id="8_fpcij"]
[ext_resource type="Script" path="res://Scripts/book_pile_control.gd" id="9_lyhns"]
[ext_resource type="Script" path="res://Scripts/projector_control.gd" id="10_udi1g"]
[ext_resource type="Script" path="res://Scripts/food_container_control.gd" id="11_jimfx"]
[ext_resource type="Texture2D" uid="uid://b2qdek2swbeio" path="res://Arts/cat_food_refill_before.png" id="12_xh5um"]
[ext_resource type="Script" path="res://Scripts/bowl_control.gd" id="13_2t1v8"]
[ext_resource type="Texture2D" uid="uid://ciuuhbxhfm6s" path="res://Arts/cat_bowl_empty.png" id="14_j0lfm"]
[ext_resource type="Script" path="res://Scripts/passport_callout.gd" id="16_k56ic"]
[ext_resource type="PackedScene" uid="uid://p22wckqd2lqp" path="res://Scenes/DialogueBox.tscn" id="16_vdwva"]
[ext_resource type="PackedScene" uid="uid://b1nalvenb4n3e" path="res://Scenes/Milestone.tscn" id="17_mfrjw"]
[ext_resource type="Texture2D" uid="uid://bg0p8s60j3fd3" path="res://Arts/passport_icon_callout.png" id="17_v7gl1"]
[ext_resource type="Texture2D" uid="uid://bdd8tpm11h6ib" path="res://Arts/passport_small_icon.png" id="18_isux8"]
[ext_resource type="PackedScene" uid="uid://bm52apdqmvtot" path="res://Scenes/PassportContent.tscn" id="18_w03qr"]
[ext_resource type="PackedScene" uid="uid://ce35uuxi5fq6j" path="res://Scenes/Projector.tscn" id="20_4islk"]
[ext_resource type="PackedScene" uid="uid://ssue0m4qp6u0" path="res://Scenes/GlobeMap.tscn" id="22_op86r"]
[ext_resource type="PackedScene" uid="uid://bicqk55ccy7if" path="res://Scenes/Vault.tscn" id="25_j0rmd"]

[node name="StudyRoom" type="Node2D"]
script = ExtResource("1_ph431")

[node name="RoomLayout" type="TextureRect" parent="."]
offset_right = 960.0
offset_bottom = 540.0
texture = ExtResource("1_5g1kl")
stretch_mode = 5

[node name="ParkNav" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 739.0
offset_top = 25.0
offset_right = 932.0
offset_bottom = 63.0
script = ExtResource("3_qt56e")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="ParkNav"]
layout_mode = 0
offset_left = 45.0
offset_top = 10.0
offset_right = 205.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0.552941, 0.490196, 0.168627, 1)
theme_override_fonts/font = ExtResource("4_4eer6")
theme_override_font_sizes/font_size = 20
text = "The Park"

[node name="NavIcon" type="TextureRect" parent="ParkNav"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_a26r8")

[node name="ComputerControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 702.0
offset_top = 169.0
offset_right = 838.0
offset_bottom = 281.0
script = ExtResource("2_pepfh")

[node name="HoverRect" type="ColorRect" parent="ComputerControl"]
layout_mode = 0
offset_left = 8.0
offset_top = 7.0
offset_right = 129.0
offset_bottom = 80.0
color = Color(0.62, 1, 0.797333, 0.501961)
script = ExtResource("4_qvdir")

[node name="CalendarControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 524.0
offset_top = 54.0
offset_right = 652.0
offset_bottom = 172.0
script = ExtResource("3_iyfv0")

[node name="HoverRect" type="ColorRect" parent="CalendarControl"]
layout_mode = 0
offset_left = 2.0
offset_top = 26.0
offset_right = 126.0
offset_bottom = 116.0
color = Color(0.960784, 1, 0.623529, 0.568627)
script = ExtResource("4_qvdir")

[node name="VaultControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 599.0
offset_top = 333.0
offset_right = 645.0
offset_bottom = 400.0
script = ExtResource("5_ca4rd")

[node name="HoverRect" type="ColorRect" parent="VaultControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.960784, 1, 0.623529, 0.568627)
script = ExtResource("4_qvdir")

[node name="TopBookControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 181.0
offset_top = 114.0
offset_right = 425.0
offset_bottom = 199.0
script = ExtResource("5_1666q")

[node name="Book1" type="ColorRect" parent="TopBookControl"]
layout_mode = 0
offset_left = -2.0
offset_top = 16.0
offset_right = 25.0
offset_bottom = 87.0
color = Color(0.960784, 1, 0.623529, 0.568627)
script = ExtResource("6_w6iad")

[node name="Book2" type="ColorRect" parent="TopBookControl"]
layout_mode = 0
offset_left = 27.0
offset_top = 3.0
offset_right = 57.0
offset_bottom = 85.0
color = Color(0.960784, 1, 0.623529, 0.568627)
script = ExtResource("6_w6iad")

[node name="Book3" type="ColorRect" parent="TopBookControl"]
layout_mode = 0
offset_left = 59.0
offset_top = 20.0
offset_right = 87.0
offset_bottom = 87.0
color = Color(0.960784, 1, 0.623529, 0.568627)
script = ExtResource("6_w6iad")

[node name="Book4" type="ColorRect" parent="TopBookControl"]
layout_mode = 0
offset_left = 104.0
offset_right = 134.0
offset_bottom = 86.0
color = Color(0.960784, 1, 0.623529, 0.568627)
script = ExtResource("6_w6iad")

[node name="Book5" type="ColorRect" parent="TopBookControl"]
layout_mode = 0
offset_left = 147.0
offset_top = 8.0
offset_right = 178.0
offset_bottom = 86.0
color = Color(0.960784, 1, 0.623529, 0.568627)
script = ExtResource("6_w6iad")

[node name="Book6" type="ColorRect" parent="TopBookControl"]
layout_mode = 0
offset_left = 181.0
offset_top = 16.0
offset_right = 207.0
offset_bottom = 86.0
color = Color(0.960784, 1, 0.623529, 0.568627)
script = ExtResource("6_w6iad")

[node name="Book7" type="ColorRect" parent="TopBookControl"]
layout_mode = 0
offset_left = 213.0
offset_top = 4.0
offset_right = 243.0
offset_bottom = 86.0
color = Color(0.960784, 1, 0.623529, 0.568627)
script = ExtResource("6_w6iad")

[node name="GlobeControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 185.0
offset_top = 219.0
offset_right = 267.0
offset_bottom = 309.0
script = ExtResource("8_fpcij")

[node name="HoverRect" type="ColorRect" parent="GlobeControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.960784, 1, 0.623529, 0.568627)
script = ExtResource("4_qvdir")

[node name="BookPileControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 316.0
offset_top = 244.0
offset_right = 394.0
offset_bottom = 308.0
script = ExtResource("9_lyhns")

[node name="HoverRect" type="ColorRect" parent="BookPileControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -17.0
offset_right = 15.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.960784, 1, 0.623529, 0.568627)
script = ExtResource("4_qvdir")

[node name="ProjectorControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 323.0
offset_top = 334.0
offset_right = 401.0
offset_bottom = 413.0
script = ExtResource("10_udi1g")

[node name="HoverRect" type="ColorRect" parent="ProjectorControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.960784, 1, 0.623529, 0.568627)
script = ExtResource("4_qvdir")

[node name="FoodContainerControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 191.0
offset_top = 343.0
offset_right = 253.0
offset_bottom = 413.0
script = ExtResource("11_jimfx")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="FoodContainerControl"]
position = Vector2(30, 35)
scale = Vector2(2.2, 2.2)
texture = ExtResource("12_xh5um")

[node name="HoverRect" type="ColorRect" parent="FoodContainerControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.960784, 1, 0.623529, 0.568627)
script = ExtResource("4_qvdir")

[node name="BowlControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 51.0
offset_top = 375.0
offset_right = 113.0
offset_bottom = 445.0
script = ExtResource("13_2t1v8")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="BowlControl"]
position = Vector2(30, 35)
scale = Vector2(2.2, 2.2)
texture = ExtResource("14_j0lfm")

[node name="Audio" type="AudioStreamPlayer2D" parent="BowlControl"]

[node name="HoverRect" type="ColorRect" parent="BowlControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 13.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.960784, 1, 0.623529, 0.568627)
script = ExtResource("4_qvdir")

[node name="PassportCallout" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 225.0
offset_top = 12.0
offset_right = 312.0
offset_bottom = 111.0
script = ExtResource("16_k56ic")
metadata/_edit_group_ = true

[node name="Callout" type="TextureRect" parent="PassportCallout"]
layout_mode = 0
offset_left = 8.0
offset_right = 83.0
offset_bottom = 118.0
texture = ExtResource("17_v7gl1")
stretch_mode = 5

[node name="PassportIcon" type="TextureRect" parent="PassportCallout"]
layout_mode = 0
offset_left = 13.0
offset_top = 5.0
offset_right = 63.0
offset_bottom = 68.0
texture = ExtResource("18_isux8")
stretch_mode = 5

[node name="PassportContent" parent="." instance=ExtResource("18_w03qr")]
offset_left = -974.0
offset_top = 13.0
offset_right = -14.0
offset_bottom = 553.0

[node name="Projector" parent="." instance=ExtResource("20_4islk")]
offset_left = -1086.0
offset_top = 577.0
offset_right = -126.0
offset_bottom = 1117.0

[node name="GlobeMap" parent="." instance=ExtResource("22_op86r")]
offset_left = -1034.0
offset_top = -590.0
offset_right = -74.0
offset_bottom = -50.0

[node name="VaultContent" parent="." instance=ExtResource("25_j0rmd")]
offset_left = -960.0
offset_top = -1212.0
offset_bottom = -672.0

[node name="Milestone" parent="." instance=ExtResource("17_mfrjw")]
offset_left = 994.0
offset_top = 676.0
offset_right = 1954.0
offset_bottom = 1216.0
size_flags_horizontal = 4

[node name="DialogueBox" parent="." instance=ExtResource("16_vdwva")]
offset_left = 972.0
offset_top = 5.0
offset_right = 1932.0
offset_bottom = 545.0

[node name="TransparentShield" type="ColorRect" parent="."]
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 784.0
offset_top = -584.0
offset_right = 1744.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.588235)
